# TelemetryWatch

./: .dockerignore  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  env.example  install.sh
config/: prometheus.yml
config/grafana/: dashboards.yml  datasources.yml
config/grafana/dashboards/: telemetrywatch.json
docker/: Dockerfile
k8s/: configmaps.yaml  grafana-deployment.yaml  namespace.yaml  postgresql-deployment.yaml  prometheus-deployment.yaml  pvc.yaml  secrets.example.yaml  services.yaml  telemetrywatch-deployment.yaml
src/: api.rs  config.rs  db.rs  main.rs  metrics.rs  middleware.rs
